# PY_NLP_BASIC

./: Conditional_Random_Fields.ipynb  NLP_basic.ipynb  Search_Information_Retrieval.ipynb  Sentiment-analysis.ipynb  Structured_Prediction.ipynb  main.py  pyproject.toml  sentiment_model.pkl  target_ads_and_recommendation_system.ipynb
