[project]
name = "learnning-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastai>=2.8.5",
    "hf-xet>=1.2.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "kagglehub>=0.3.13",
    "nltk>=3.9.2",
    "pip>=25.3",
    "pythainlp>=5.1.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "sklearn-crfsuite>=0.5.0",
    "spacy>=3.8.11",
    "spacy-lookups-data>=1.0.5",
    "spacy-stanza>=1.0.4",
    "spacy-thai>=0.7.8",
    "spacy-udpipe>=1.0.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
